<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="default_error">에러 발생</string>
    <string name="app_error_100">컵 이름을 설정해주세요.</string>
    <string name="complete">완료</string>
    <string name="init_intake_title">목표 물의 양을 설정해주세요.</string>
    <string name="init_intake_subtitle">매일 채울 물의 양을 설정합니다.</string>
    <string name="intake_amount">일일 물 섭취량(ml)</string>
    <string name="init_language_title">앱 내 사용 언어를 설정해주세요.</string>
    <string name="lang_ko">한국어</string>
    <string name="lang_en">English</string>
    <string name="lang_jp">日本語</string>
    <string name="lang_cn">简体中文</string>
    <string name="next">다음</string>
    <string name="init_time_title">기상/취침 시간을 설정해주세요.</string>
    <string name="init_time_subtitle">설정한 시간 대에 알람을 수신하게 됩니다.</string>
    <string name="wakeup_time">기상 시간</string>
    <string name="sleep_time">취침 시간</string>
    <string name="start">시작</string>
    <string name="end">종료</string>
    <string name="cancel">취소</string>
    <string name="save">저장</string>
    <string name="ok">확인</string>
    <string name="menu_intake">섭취량 변경</string>
    <string name="menu_alarm_setting">알람 설정</string>
    <string name="menu_bottom_home">홈</string>
    <string name="menu_bottom_log">로그</string>
    <string name="menu_bottom_setting">설정</string>
    <string name="unit_ml">(ml)</string>
    <string name="unit_liter">(L)</string>
    <string name="unit_ml_no_bracket">ml</string>
    <string name="unit_l_no_bracket">L</string>
    <string name="unit_hour">(h)</string>
    <string name="unit_day">(d)</string>
    <string name="log_day_title">일</string>
    <string name="log_week_title">주</string>
    <string name="log_month_title">월</string>
    <string name="total">총</string>
    <string name="goal">목표</string>
    <string name="record">기록</string>
    <string name="cup_list_title">컵 목록</string>
    <string name="cup_list_reorder">순서 변경</string>
    <string name="cup_list_add">+ 새 컵 추가하기</string>
    <string name="cup_list_edit">수정 완료</string>
    <string name="cup_alias">컵 이름</string>
    <string name="cup_alias_hint">컵 이름을 설정해주세요.</string>
    <string name="cup_amount">컵 용량</string>
    <string name="cup_image">컵 이미지</string>
    <string name="add">추가하기</string>
    <string name="modify">수정하기</string>
    <string name="empty_day_list">물 섭취 기록이 없습니다.</string>
    <string name="empty_cup_list">컵을 추가해 주세요.</string>
    <string name="delete">제거하기</string>
    <string name="alarm_delay">내일 다시 켜기</string>
    <string name="alarm_sound_title">벨소리 및 진동</string>
    <string name="alarm_sound_device">폰 설정과 동일</string>
    <string name="alarm_sound_vibe">진동</string>
    <string name="alarm_sound_ringtone">벨소리</string>
    <string name="alarm_sound_all">진동 및 벨소리</string>
    <string name="alarm_sound_silence">무음</string>
    <string name="alarm_sound_noti">알림 표시</string>
    <string name="alarm_time_title">알람 시간</string>
    <string name="alarm_mode_title">알람 모드</string>
    <string name="alarm_mode_period">주기</string>
    <string name="alarm_mode_custom">맞춤</string>
    <string name="sunday">일</string>
    <string name="monday">월</string>
    <string name="tuesday">화</string>
    <string name="wednesday">수</string>
    <string name="thursday">목</string>
    <string name="friday">금</string>
    <string name="saturday">토</string>
    <string name="alarm_interval">알림 간격</string>
    <string name="alarm_etc_setting">기타 설정</string>
    <string name="alarm_etc_stop_reached_goal">목표 도달 시 멈추기</string>
    <string name="alarm_etc_delay">내일로 알람 미루기</string>
    <string name="alarm_etc_fullscreen_setting">전체화면 알람 설정</string>
    <string name="alarm_etc_exact_setting">정확한 알람 설정</string>
    <string name="permission_title">권한 설정</string>
    <string name="permission_message">설정 화면에서 직접 허용해 주세요.</string>
    <string name="day">일</string>
    <string name="hour">시간</string>
    <string name="minute">분</string>
    <string name="second">초</string>
    <string name="exact_alarm_content">화면 잠금 상태에서도 정확한 알람 수신을 위해 권한을 허용해 주세요.\n이동 버튼 선택 시 설정 화면으로 이동합니다.</string>
    <string name="do_not_show_again">다시 보지 않기</string>
    <string name="move">이동</string>
    <string name="close">닫기</string>
    <string name="alarm_detail_empty">설정된 알람이 없습니다.</string>
    <string name="alarm_detail_switch_off">알람이 해제되어 있습니다.\n알람을 켜주세요.</string>
    <string name="alarm_detail_remain">%s 후에 알람이 울립니다.</string>
    <string name="alarm_detail_mode_title">리마인더 모드</string>
    <string name="alarm_detail_mode_period_desc">선택한 간격으로 알람을 드립니다.</string>
    <string name="alarm_detail_mode_custom_desc">알람 수신 시간을 직접 설정합니다.</string>
    <string name="alarm_custom_empty_title">알람을 추가해 주세요.</string>
    <string name="alarm_custom_add">+ 새 알람 추가하기</string>
    <string name="intake_complete">목표를 달성했습니다!</string>
    <string name="alarm_ringing_soon">알람이 곧 울립니다.</string>
    <string name="setting_sync">데이터 동기화 ></string>
    <string name="setting_last_sync">마지막 동기화 %s</string>
    <string name="setting_total_intake">총 음수량</string>
    <string name="setting_total_achieve">총 달성</string>
    <string name="setting_intake_setting_title">섭취량 설정</string>
    <string name="setting_intake_title">목표 섭취량</string>
    <string name="setting_cup_manage_title">컵 관리</string>
    <string name="setting_unit_title">단위</string>
    <string name="setting_alarm_setting_title">알람 설정</string>
    <string name="setting_alarm_title">알람</string>
    <string name="setting_alarm_mode_title">알람 모드</string>
    <string name="setting_alarm_schedule_title">알람 일정</string>
    <string name="setting_alarm_time_title">알람 시간</string>
    <string name="setting_alarm_sound_title">소리 및 진동</string>
    <string name="setting_etc_setting_title">기타 설정</string>
    <string name="setting_language_title">언어 설정</string>
    <string name="setting_advertise_title">광고 제거</string>
    <string name="setting_logout">로그아웃</string>
    <string name="setting_logout_confirm">정말 로그아웃 하시겠습니까?</string>
    <string name="setting_language_restart_info">* 언어 변경 후 저장 버튼을 누르면 앱이 재실행 됩니다.</string>
    <string name="setting_last_sync_empty">버튼을 눌러서 동기화를 시작하세요.</string>

    <string name="title_main">오마물</string>
    <string name="title_cup_manage">컵 관리</string>
    <string name="title_cup_add">컵 추가/수정</string>
    <string name="title_alarm_setting">알람 설정</string>
    <string name="title_alarm_mode">알람 모드</string>
</resources>