<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray"
        app:layout_constraintTop_toTopOf="parent" />
    <com.tkw.ui.CustomCheckBox
        android:id="@+id/tv_sunday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sunday"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/divider"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/tv_monday"/>
    <com.tkw.ui.CustomCheckBox
        android:id="@+id/tv_monday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/monday"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/divider"
        app:layout_constraintLeft_toRightOf="@id/tv_sunday"
        app:layout_constraintRight_toLeftOf="@id/tv_tuesday"/>
    <com.tkw.ui.CustomCheckBox
        android:id="@+id/tv_tuesday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tuesday"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/divider"
        app:layout_constraintLeft_toRightOf="@id/tv_monday"
        app:layout_constraintRight_toLeftOf="@id/tv_wednesday"/>
    <com.tkw.ui.CustomCheckBox
        android:id="@+id/tv_wednesday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wednesday"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/divider"
        app:layout_constraintLeft_toRightOf="@id/tv_tuesday"
        app:layout_constraintRight_toLeftOf="@id/tv_thursday"/>
    <com.tkw.ui.CustomCheckBox
        android:id="@+id/tv_thursday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/thursday"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/divider"
        app:layout_constraintLeft_toRightOf="@id/tv_wednesday"
        app:layout_constraintRight_toLeftOf="@id/tv_friday"/>
    <com.tkw.ui.CustomCheckBox
        android:id="@+id/tv_friday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/friday"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/divider"
        app:layout_constraintLeft_toRightOf="@id/tv_thursday"
        app:layout_constraintRight_toLeftOf="@id/tv_saturday"/>
    <com.tkw.ui.CustomCheckBox
        android:id="@+id/tv_saturday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/saturday"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/divider"
        app:layout_constraintLeft_toRightOf="@id/tv_friday"
        app:layout_constraintRight_toRightOf="parent"/>
    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintTop_toBottomOf="@id/tv_saturday" />
    <TextView
        android:id="@+id/tv_alarm_interval"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/alarm_interval"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/divider2"
        app:layout_constraintLeft_toLeftOf="@id/tv_sunday"
        app:layout_constraintRight_toLeftOf="@id/tv_interval_set"/>
    <TextView
        android:id="@+id/tv_interval_set"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        app:layout_constraintTop_toTopOf="@id/tv_alarm_interval"
        app:layout_constraintBottom_toBottomOf="@id/tv_alarm_interval"
        app:layout_constraintRight_toLeftOf="@id/tv_icon"/>
    <TextView
        android:id="@+id/tv_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=">"
        android:textSize="16sp"
        android:layout_marginRight="8dp"
        app:layout_constraintTop_toTopOf="@id/tv_alarm_interval"
        app:layout_constraintBottom_toBottomOf="@id/tv_alarm_interval"
        app:layout_constraintRight_toRightOf="@id/tv_saturday"/>
</androidx.constraintlayout.widget.ConstraintLayout>